--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-gesture-handler": "~2.20.2"
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
