--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.19",
     "expo-constants": "~17.0.3",
+    "expo-linear-gradient": "~14.0.1",
     "expo-router": "~4.0.14",
     "expo-status-bar": "~2.0.0",
     "react": "^18.3.1",
@@ -26,8 +28,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-linear-gradient": "~14.0.1"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
