--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "whats-next-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "node --env-file .env --watch backTest.js"
   },
   "dependencies": {
     "@expo/config": "^8.1.1",
@@ -21,6 +23,10 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-router": "~4.0.14",
     "expo-status-bar": "~2.0.0",
+    "express": "^4.21.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
@@ -30,7 +36,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
