--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "dev": "node --env-file .env --watch backTest.js"
   },
   "dependencies": {
-    "@expo/config": "^8.1.1",
-    "@expo/metro-config": "^0.10.0",
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/config": "^10.0.0",
+    "@expo/metro-config": "~0.19.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.19",
+    "expo": "~52.0.26",
     "expo-constants": "~17.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-router": "~4.0.14",
-    "expo-status-bar": "~2.0.0",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "sequelize": "^6.37.5"
