--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.26",
