--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "victory-native": "^41.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
